# EasyDownloadManager

./: .gitignore  CMakeLists.txt  README.md  clion-style.xml  vcpkg.json  xmake.lua
libdownloader/: .gitignore  CMakeLists.txt  vcpkg.json
libdownloader/src/: Dispatcher.cc  Dispatcher.h  Global.h  expected.h
libdownloader/src/downloader/: CurlEx.cc  CurlEx.h  DownloadTask.cc  DownloadTask.h  DownloadTypes.h  DownloadWorker.cc  DownloadWorker.h  FetchedMetaInfo.h  FileVerifier.h  MetaInfoFetcher.cc  MetaInfoFetcher.h  TaskConfigure.cc  TaskConfigure.h
libdownloader/src/utils/: TaskLogger.cc  TaskLogger.h
libdownloader/test/cli/: cli_main.cc
libdownloader/test/server/: package.json  server.js
src/: Dispatcher.cc  Dispatcher.h  EasyDownloadManager.cc  EasyDownloadManager.h  EdmApplication.cc  EdmApplication.h  EdmConfig.cc  EdmConfig.h  Global.h  expected.h  main.cpp
src/components/: ThreadProgressBar.cc  ThreadProgressBar.h
src/config/: EdmGlobalConfig.cc  EdmGlobalConfig.h
src/database/: DownloadDatabase.cc  DownloadDatabase.h
src/downloader/: CurlEx.cc  CurlEx.h  DownloadState.h  DownloadTask.cc  DownloadTask.h  DownloadWorker.cc  DownloadWorker.h  FetchedMetaInfo.h  FileVerifier.cc  MetaInfoFetcher.cc  MetaInfoFetcher.h  MultiThreadDownloader.cc  MultiThreadDownloader.h  TaskConfigure.cc  TaskConfigure.h  TaskMetaInfoFetcher.cc  TaskMetaInfoFetcher.h
src/dto/: TaskContext.h
src/event/: EventBus.h  Events.h  SignalHandler.cc  SignalHandler.h
src/model/: Definition.h  GlobalDefaults.h  TaskModel.h
src/resources/: Resources.qrc
src/ui/main/: MainWindow.cc  MainWindow.h  MainWindow.ui
src/ui/new_task/: NewTaskDialog.cc  NewTaskDialog.h
src/ui/settings/: SettingsDialog.cc  SettingsDialog.h  SettingsDialog.ui
src/ui/task_completed/: TaskCompletedDialog.cc  TaskCompletedDialog.h  TaskCompletedDialog.ui
src/ui/task_downloading/: TaskDownloadingDialog.cc  TaskDownloadingDialog.h  TaskDownloadingDialog.ui
src/ui/task_information/: TaskInformationDialog.cc  TaskInformationDialog.h  TaskInformationDialog.ui
src/utils/: EnumUtils.h  IconUtils.h  ProxyUtils.h  StringUtils.h  TimeUtils.h  Utils.h
src/windows/main/: MainWindow.cc  MainWindow.h
src/windows/new_task/: NewTaskDialog.ui
